--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
         "express": "^4.16.3",
         "lodash": "^4.17.10",
         "morgan": "^1.9.0",
+        "npm": "^6.1.0",
         "q": "^1.5.1",
+        "rc": "^1.2.7",
+        "sql": "^0.78.0",
         "uuid-logger": "^1.1.1",
         "yargs": "^11.0.0"
     },
