--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "express": "^4.16.3",
         "lodash": "^4.17.10",
         "morgan": "^1.9.0",
+        "mysql": "^2.15.0",
         "npm": "^6.1.0",
         "q": "^1.5.1",
         "rc": "^1.2.7",
