--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "Contacts book written in node",
     "main": "app.js",
     "scripts": {
+        "start": "node app -p 1308 -e production -l debug",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
@@ -33,5 +34,8 @@
     "devDependencies": {
         "eslint": "^4.19.1",
         "eslint-config-google": "^0.9.1"
+    },
+    "engines": {
+        "node": "10.1.0"
     }
 }
