--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "nyc": "^11.8.0",
         "randomstring": "^1.1.5",
         "should": "^13.2.1",
+        "sinon": "^5.0.10",
         "sleep": "^5.1.1",
         "supertest": "^3.1.0"
     },
